# django-coreagenda

./: .build.yaml  .flake8  .gitignore  pyproject.toml
coreagenda/: __init__.py  admin.py  apps.py  urls.py
coreagenda/migrations/: 0001_initial.py
coreagenda/models/: __init__.py  action_item.py  agenda_item.py  attendance.py  external_request.py  meeting.py  minute.py  presenter.py
coreagenda/services/: __init__.py  action_service.py  agenda_service.py  attendance_service.py  meeting_service.py  minute_service.py
coreagenda/tests/: README.md  conftest.py  test_action_item_model.py  test_agenda_item_model.py  test_meeting_model.py  test_remaining_models.py  test_services.py
coreagenda/views/: __init__.py  action_views.py  agenda_views.py  attendance_views.py  meeting_views.py  minute_views.py
docs/: example_agendaitem_state.txt
domain/workflows/: definitions.py  errors.py
domain/workflows/tests/: test_engine_basic.py
tests/: __init__.py  settings.py  urls.py
