[project]
name = "django-coreagenda"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = ["ruff", "isort", "django-extensions", "django-stubs"]
test = ["Django>=5.0", "pytest", "pytest-django", "factory_boy"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = "test*.py"
pythonpath = "."
testpaths = ["coreagenda/tests"]
filterwarnings = ["ignore::DeprecationWarning"]
addopts = "--ds=tests.settings"
markers = [
    "unit: unit tests.",
    "integration: integration tests.",
    "workflow: workflow tests.",
]
