[project]
name = "django-coreagenda"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "autoimport>=1.6.1",
    "black>=25.11.0",
    "django>=5.2.8",
    "flake8>=7.3.0",
]

[project.optional-dependencies]
dev = ["isort", "django-extensions", "django-stubs"]
test = ["Django>=5.0", "pytest", "pytest-django", "factory_boy"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = "test*.py"
pythonpath = "."
testpaths = ["coreagenda/tests", "coreagenda/domain/worksflows/tests/test_*.py"]
filterwarnings = ["ignore::DeprecationWarning"]
addopts = "--ds=tests.settings"
markers = [
    "unit: unit tests.",
    "integration: integration tests.",
    "workflow: workflow tests.",
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
disallow_untyped_defs = true


[dependency-groups]
dev = [
    "autoimport>=1.6.1",
    "black>=25.11.0",
    "isort>=7.0.0",
    "mypy>=1.18.2",
    "pdbpp>=0.11.7",
    "pytest>=9.0.1",
    "pytest-django>=4.11.1",
]
